--- a/experience.html
+++ b/experience.html
@@ -83,11 +83,11 @@
       </div>
       <div class="skill">
         <h4>JavaScript</h4>
-        <div class="bar"><div class="fill" style="width: 65%;"></div></div>
+        <div class="bar"><div class="fill" style="width: 60%;"></div></div>
       </div>
       <div class="skill">
         <h4>SQL</h4>
-        <div class="bar"><div class="fill" style="width: 50%;"></div></div>
+        <div class="bar"><div class="fill" style="width: 45%;"></div></div>
       </div>
       <div class="skill">
         <h4>Excel</h4>
@@ -97,7 +97,7 @@
   </section>
 
   <footer>
-    <p>© 2025 Aryan Lamba | <a href="mailto:aryanninja2542@gmail.com">aryanninja2542@gmail.com</a></p>
+    <p>Aryan Lamba | <a href="mailto:aryanninja2542@gmail.com">aryanninja2542@gmail.com</a></p>
   </footer>
 </body>
 </html>
