--- a/experience.html
+++ b/experience.html
@@ -13,7 +13,7 @@
       <ul class="nav-links">
         <li><a href="index.html">Home</a></li>
         <li><a href="experience.html" class="active">Experience</a></li>
-        <li><a href="projects.html">Projects</a></li>
+        <li><a href="contact.html">Projects</a></li>
       </ul>
     </nav>
   </header>
