--- a/experience.html
+++ b/experience.html
@@ -23,7 +23,7 @@
     <div class="card-grid">
 
       <div class="card">
-        <h3>Astro Medical Supply Store – Assistant</h3>
+        <h3>Astro Medical Supply Store – Assistant(Unofficial/Unpaid)</h3>
         <h4>Houston, TX (2023–2025)</h4>
         <ul>
           <li>Organized inventory and tracked product shipments.</li>
