--- a/experience.html
+++ b/experience.html
@@ -15,6 +15,7 @@
         <li><a href="experience.html" class="active">Experience</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
+      <button id="theme-toggle" class="theme-btn">🌙</button>
     </nav>
   </header>
 
@@ -23,7 +24,7 @@
     <div class="card-grid">
 
       <div class="card">
-        <h3>Astro Medical Supply Store – Assistant(Unofficial/Unpaid)</h3>
+        <h3>Astro Medical Supply Store – Assistant (Unofficial/Unpaid)</h3>
         <h4>Houston, TX (2023–2025)</h4>
         <ul>
           <li>Organized inventory and tracked product shipments.</li>
@@ -91,7 +92,7 @@
       </div>
       <div class="skill">
         <h4>Excel</h4>
-        <div class="bar"><div class="fill" style="width:85%;"></div></div>
+        <div class="bar"><div class="fill" style="width: 85%;"></div></div>
       </div>
     </div>
   </section>
@@ -99,5 +100,7 @@
   <footer>
     <p>Aryan Lamba | <a href="mailto:aryanninja2542@gmail.com">aryanninja2542@gmail.com</a></p>
   </footer>
+
+  <script src="script.js"></script>
 </body>
 </html>
