Add online courses section to index.html
Added a new section for online courses and specializations with a list of courses.

--- a/index.html
+++ b/index.html
@@ -53,6 +53,20 @@
     </ul>
   </section>
 
+  <section class="courses">
+    <h2>Online Courses & Specializations</h2>
+    <ul class="list">
+      <li>Python for Everybody Specialization – University of Michigan (Coursera, 2023)</li>
+      <li>CodeHS Python Certification(2024)</li>
+      <li>AWS Fundamentals Specialization - Amazon Web Services (Coursera, 2024)</li>
+      <li>Web Design for Everybody: Basics of Web Development & Coding - University of Michigan (Coursera, 2024) </li>
+      <li>CodeHS Java Certification(2025)</li>
+      <li>Information Technonlogy Specialist in Java Cerification (Certiport, 2025)</li>
+      <li>Algorithmic Toolbox - University of California San Diego (Coursera, 2025)</li>
+      <li>Data Structures - University of California San Deigo (Coursera, In Progress)</li>
+    </ul>
+  </section>
+
   <footer>
     <p>Aryan Lamba | Built with HTML, CSS & JS</p>
   </footer>
