Refactor experience and skills sections
Updated experience and skills sections with new roles, adjusted view counts, and improved skill proficiency percentages.

--- a/experience.html
+++ b/experience.html
@@ -23,7 +23,7 @@
     <h2>Experience & Leadership</h2>
     <div class="card-grid">
 
-      <div class="card">
+      <div class="card fade-in">
         <h3>Astro Medical Supply Store – Assistant (Unofficial/Unpaid)</h3>
         <h4>Houston, TX (2023–2025)</h4>
         <ul>
@@ -33,7 +33,7 @@
         </ul>
       </div>
 
-      <div class="card">
+      <div class="card fade-in">
         <h3>Computer Science Club – Vice President</h3>
         <h4>Fulshear High School (2024–2025)</h4>
         <ul>
@@ -42,7 +42,7 @@
         </ul>
       </div>
 
-      <div class="card">
+      <div class="card fade-in">
         <h3>Computer Science UIL Team – Member</h3>
         <h4>Fulshear High School (2025)</h4>
         <ul>
@@ -51,14 +51,12 @@
         </ul>
       </div>
 
-      <div class="card">
+      <div class="card fade-in">
         <h3>Active LeetCode Contributor</h3>
         <h4>(2024–2025)</h4>
         <ul>
-          <li>Posted coding solutions and explanations with over 37K views.</li>
+          <li>Posted coding solutions and explanations with over 36.8K views.</li>
           <li>Ranked in top 9.7% globally in problem solving.</li>
-          <li>Ranked in top 34.82% in Contests</li>
-          <li>Account Link: https://leetcode.com/u/Aryan_Falcon/</li>
         </ul>
       </div>
 
@@ -68,33 +66,33 @@
   <section class="content skills-section">
     <h2>Technical Skills</h2>
     <div class="skills-grid">
-      <div class="skill">
+      <div class="skill fade-in">
         <h4>Python</h4>
-        <div class="bar"><div class="fill" style="width: 85%;"></div></div>
+        <div class="bar"><div class="fill" style="width: 90%;"></div></div>
       </div>
-      <div class="skill">
+      <div class="skill fade-in">
         <h4>Java</h4>
-        <div class="bar"><div class="fill" style="width: 85%;"></div></div>
+        <div class="bar"><div class="fill" style="width: 90%;"></div></div>
       </div>
-      <div class="skill">
+      <div class="skill fade-in">
         <h4>C++</h4>
         <div class="bar"><div class="fill" style="width: 20%;"></div></div>
       </div>
-      <div class="skill">
+      <div class="skill fade-in">
         <h4>HTML & CSS</h4>
-        <div class="bar"><div class="fill" style="width: 80%;"></div></div>
+        <div class="bar"><div class="fill" style="width: 85%;"></div></div>
       </div>
-      <div class="skill">
+      <div class="skill fade-in">
         <h4>JavaScript</h4>
         <div class="bar"><div class="fill" style="width: 60%;"></div></div>
       </div>
-      <div class="skill">
+      <div class="skill fade-in">
         <h4>SQL</h4>
-        <div class="bar"><div class="fill" style="width: 40%;"></div></div>
+        <div class="bar"><div class="fill" style="width: 45%;"></div></div>
       </div>
-      <div class="skill">
+      <div class="skill fade-in">
         <h4>Excel</h4>
-        <div class="bar"><div class="fill" style="width: 85%;"></div></div>
+        <div class="bar"><div class="fill" style="width:85%;"></div></div>
       </div>
     </div>
   </section>
