--- a/experience.html
+++ b/experience.html
@@ -19,11 +19,11 @@
     </nav>
   </header>
 
-  <section class="content visible"> <!-- already visible -->
+  <section class="content">
     <h2>Experience & Leadership</h2>
     <div class="card-grid">
 
-      <div class="card visible"> <!-- already visible -->
+      <div class="card fade-in">
         <h3>Astro Medical Supply Store – Assistant (Unofficial/Unpaid)</h3>
         <h4>Houston, TX (2023–2025)</h4>
         <ul>
@@ -33,7 +33,7 @@
         </ul>
       </div>
 
-      <div class="card visible"> <!-- already visible -->
+      <div class="card fade-in">
         <h3>Computer Science Club – Vice President</h3>
         <h4>Fulshear High School (2024–2025)</h4>
         <ul>
@@ -63,18 +63,44 @@
     </div>
   </section>
 
-  <section class="content skills-section fade-in">
+  <section class="content skills-section">
     <h2>Technical Skills</h2>
     <div class="skills-grid">
-      <div class="skill">
+      <div class="skill fade-in">
         <h4>Python</h4>
         <div class="bar"><div class="fill" style="width: 90%;"></div></div>
       </div>
-      <div class="skill">
+      <div class="skill fade-in">
         <h4>Java</h4>
         <div class="bar"><div class="fill" style="width: 90%;"></div></div>
       </div>
-      <div class="skill">
+      <div class="skill fade-in">
         <h4>C++</h4>
         <div class="bar"><div class="fill" style="width: 20%;"></div></div>
       </div>
+      <div class="skill fade-in">
+        <h4>HTML & CSS</h4>
+        <div class="bar"><div class="fill" style="width: 85%;"></div></div>
+      </div>
+      <div class="skill fade-in">
+        <h4>JavaScript</h4>
+        <div class="bar"><div class="fill" style="width: 60%;"></div></div>
+      </div>
+      <div class="skill fade-in">
+        <h4>SQL</h4>
+        <div class="bar"><div class="fill" style="width: 45%;"></div></div>
+      </div>
+      <div class="skill fade-in">
+        <h4>Excel</h4>
+        <div class="bar"><div class="fill" style="width:85%;"></div></div>
+      </div>
+    </div>
+  </section>
+
+  <footer>
+    <p>Aryan Lamba | <a href="mailto:aryanninja2542@gmail.com">aryanninja2542@gmail.com</a></p>
+  </footer>
+
+  <script src="script.js"></script>
+</body>
+</html>
